fix spacing on mobile

--- a/src/components/Hero/_Hero.scss
+++ b/src/components/Hero/_Hero.scss
@@ -8,7 +8,8 @@
   @media (max-width: 838px) {
     grid-template-rows: auto auto;
     padding-top: space(9);
-    row-gap: space(10);
+    padding-bottom: space(25);
+    row-gap: space(5);
   }
 
   &-outer {
