--- a/src/components/Project/_Project.scss
+++ b/src/components/Project/_Project.scss
@@ -2,13 +2,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: space(10);
-  margin: space(25) 0 space(25) 0;
+  margin: space(25) 0;
 
   @media (max-width: 1032px) {
     grid-template-columns: 80vw;
     grid-template-rows: auto auto;
-    gap: space(10);
+    gap: space(8);
     justify-content: center;
+    margin: space(20) 0;
   }
 
   &__screens {
